# snapdiff

./: README.md  pyproject.toml
src/humanguard/: cli.py
src/humanguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
